Resolves tdf#153223 - Suppress variable line height when skia is off

Change-Id: I9194c25bf2fc104574bd27e6b8683b63111e6ad8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169192
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>